--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
     remote = storage
+[cache]
+    dir = ../../external_cache
 ['remote "storage"']
     url = s3://sanidhyasbucket/datastore
